# bitefix

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
bitefix/: BiteFixAIAgents.py  BiteFixAICrew.py  BiteFixAIRunner.py  BiteFixAITasks.py  __init__.py  bitefix_utils.py
