[metadata]
name = bitefix
version = 0.1.0
author = Pallavi Sinha
author_email = dataaienthusiast128@gmail.com
description = Bitefix is an efficient library designed to streamline Python Runtime error debugging with AI-powered decorators.
license = MIT
home-page = https://github.com/Pallavi-Sinha-12/bitefix